--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zanroo@slackbot",
+  "name": "@zanroo/slackbot",
   "version": "1.0.0",
   "description": "Slack util",
   "main": "index.js",
